--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
@@ -24,8 +24,8 @@ Sraddha.Lo! Vicharanā! What brought thee
 to this place ? 
 89 
 Vicharana. My beloved friend! Hear me. 
-Some apostates and agnostics, clever in establishing the doctrine of Buddha and Jina, have now been ordered by king Mahāmôha-irate at hearing the preparations of king Vivēka, assisted by his chief Vyavasaya,'-to perturb Jiva whose mind is now firmly fixed on Purushottama's (Vishnu's) lotus-feet, by diverting it to some other object, just like a tiller leaving his plough and running after a jackal'. The rumour that these atheists surround the Jiva hath reached Sumati, our queen, who hath asked me to convey this news confidentially to the chief Vyavasaya, who is now closetted with the great king Vivēka. I have now set out to see this Vyavasaya. 
-Sraddha. That the Perverts have joined hands with Mahāmôha in his enterprise is just like the asses' song in the ghost's marriage. But mind not. It is no difficult task at all 
+Some apostates and agnostics, clever in establishing the doctrine of Buddha and Jina, have now been ordered by king Mahāmōha-irate at hearing the preparations of king Vivēka, assisted by his chief Vyavasaya,'-to perturb Jiva whose mind is now firmly fixed on Purushottama's (Vishnu's) lotus-feet, by diverting it to some other object, just like a tiller leaving his plough and running after a jackal'. The rumour that these atheists surround the Jiva hath reached Sumati, our queen, who hath asked me to convey this news confidentially to the chief Vyavasaya, who is now closetted with the great king Vivēka. I have now set out to see this Vyavasaya. 
+Sraddha. That the Perverts have joined hands with Mahāmōha in his enterprise is just like the asses' song in the ghost's marriage. But mind not. It is no difficult task at all 
 1. Industry or Effort. 2. हालिकजम्बुकदर्शनन्याय 
 90 
 for our great king to overthrow the doctrines of our opponents. 
@@ -34,7 +34,7 @@ Sraddha. Thou shalt realise the truth of what I say, on the basis of the popular
 1. Quick can Vivēka overthrow the creeds of all Heretics like the rising Sun driving darkness dense, like the raging wild fire devouring the forest dry,-the forest of the Vindhya range,-like the mighty hurricane blowing off cotton mountains high. 
 2. The School of Philosophy founded by Brihaspati the main doctrine of which is :--" Enjoy whilst thou livest, for it is but blank after death." 
 Eat and live to-day, let to-morrow take care of itself." &c. See Paramata-bhanga by Desika.91 
-Therefore the attempt of Mahāmôha in collecting a host of Perverts to conquer Vivēka is no better than that 
+Therefore the attempt of Mahāmōha in collecting a host of Perverts to conquer Vivēka is no better than that 
 of a stone-raft sought out for crossing the high seas. 
 Vicharana.-Dear friend! Thy words have swift imparted courage to me, and my mis-givings have given way. I shall see my lady after speedily executing her commands. 
 Sraddha.-Hallo! Vichārana! Thy level-headedness, and friendship as well, have been demonstrated. I will now gather lotus blossoms, and thou wilt betake to the royal castle. 
@@ -49,21 +49,21 @@ distracted by pursuits vain and bound by karmas severe, so many times over.
 (Brooding for a while and sighing.) 5. In this perfect world, teeming mostly with ignoramuses, God's displeasure compelleth crafty men being born, to range themselves in hostile camps, to devise doctrines diverse, and by their inculcation to provoke wranglings many. In no way do these differ from the ravings of men gone daft. 
 Alas! How shall true Vēdānta thrive in this world pestered by (such) doctrines distractingly diverse, causing confusion worse confounded? 
 (Looking at the sky.) 
-Ah, thou vile Mahāmôha! By rendering the worlds three bewildered what hath been or what will be thy gain? 
+Ah, thou vile Mahāmōha! By rendering the worlds three bewildered what hath been or what will be thy gain? 
 1. Where drugs life-giving have become scarce, noxious ones beteem the sea-girt earth. 
 To remove this pain, I shall resort to the Lord Almighty. 
 93 
 (Gesturing recollection.) 
 1. I adore the causeless and stainless splendour of Hayagriva, present as a pure mount crystal-made, depriving the agonies of the worlds three by His dazzle, nectarlike,-Hayagriva whose neighing voice resembleth the Upanishads Eternal. 
 2. Further, may the neigh of Hayagrivathe sum and sense and seat of Vedas, Sāma, Rig and Yajur,-of all obstacles the Remover, the surging swell of the sea of selfknowledge-efface my inner ignorance, caused by the clamour of heretics, conceited, combative and carrying a roaring trade (of theirs.) 
-Senapati.-Ah. Great King! By valour over Mahāmôha, thy success is as sure as the unfailing noise of the Aranyakas that compare only with Anaranya's curse. 
+Senapati.-Ah. Great King! By valour over Mahāmōha, thy success is as sure as the unfailing noise of the Aranyakas that compare only with Anaranya's curse. 
 1. The horse-faced form of Vishnu. 
 2. The main body of the Upanishads. 
 3. A king of the Ikshvāku race, an ancestor of Sri Rama, was forced to wage a battle with Bavana when the former was quite unprepared and 
 94 
 1. Thou hast just imparted Vedantaknowledge to Jiva; all that remaineth now to be done is to remove his inattention2. 
 King.-(With joy.) Genial soul. In all modesty hast thou rightly reminded me. With thee to aid, what yet remaineth to be done, I guess, hath already been done. 
-1.  Let alone Sama, Dama and others, arrayed in hosts of hundreds and thousands, heroic enough to cripple Mahāmôha's gratuitous hate for me. Like unto Vishvaksēna3, the all-devoted to Vishnu in the work of overthrowing Asuras, art thou (to me) the efficient tool to fell faiths, faithless. 
+1.  Let alone Sama, Dama and others, arrayed in hosts of hundreds and thousands, heroic enough to cripple Mahāmōha's gratuitous hate for me. Like unto Vishvaksēna3, the all-devoted to Vishnu in the work of overthrowing Asuras, art thou (to me) the efficient tool to fell faiths, faithless. 
 was eventually slain, and who before his deatb pronounced the following curse on Rāvana. 
 cf. Uttara Ramayana. 
 उत्पत्स्यते कुले त्यस्मिन्निक्ष्वाकूणां महात्मनाम् । 
@@ -271,7 +271,7 @@ every respect.
 Further:- 
 5 
 3 
-1.  The Sruti, though violated in various ways by Bauddhas Kānādas, Naiyāyikas," Jinas, Kapilas, Chārvākas, and Gômukhavyaghras shining in the (ostensible) coat of Vedic research, is, in this world, protected by thy (Vivēkā's)" Saviour-the Almighty who incarnateth Himself in diverse ways, and doth thrive, coming out unscathed from the turmoil of perverts. 
+1.  The Sruti, though violated in various ways by Bauddhas Kānādas, Naiyāyikas," Jinas, Kapilas, Chārvākas, and Gōmukhavyaghras shining in the (ostensible) coat of Vedic research, is, in this world, protected by thy (Vivēkā's)" Saviour-the Almighty who incarnateth Himself in diverse ways, and doth thrive, coming out unscathed from the turmoil of perverts. 
 2. See n. 4, p. 98. 
 3. 
 4. 
@@ -376,7 +376,7 @@ The reputed author of the Mahabharata.
 39 
 ,, Sri Bhagavata. 
 the word Suka means a parrot as well.121 
-the labours of the great Bôdhāyana'. 
+the labours of the great Bōdhāyana'. 
 King.-(With delight.) Who can not be won by this Arya, of such lasting love to his master? 
 For:- 
 1.  Of love unabating for his master, ever intent on his praise, and with care for his goods, house, etc., and conserving Tradition for use for the fit, this grateful, sinless (disciple), is sure to earn his 
@@ -439,7 +439,7 @@ other, yet band together, forgetting for the time being their own mutual malice 
 in this world. Mind not the sundries; some wicked men, with conceit brimming in their minds, desire to overthrow, alas! the virtuous with arguments unworthy to be pronounced in an assembly. The foremost1 in this assembly and the foremost in the army, shall hear this 
 as well :- 
 1.  Self-condemned standeth the mass of arguments adduced by these Casuists by their mental conflict with each other; their Sastras are refuted by the eternal Vedas. Now the contestants relying on mere bombastry, are no match for me, even if they bodily oppose me. 
-(Smiling.) Hallo! The blind lead the blind with the staff, and the lame carry the Jame!! Even so are these perverts, whose wits are blinded by the darkness-Karma, and who are the trusted counsellors of Mahāmôha. 
+(Smiling.) Hallo! The blind lead the blind with the staff, and the lame carry the Jame!! Even so are these perverts, whose wits are blinded by the darkness-Karma, and who are the trusted counsellors of Mahāmōha. 
 1. Vivéka, the President (King.) 
 2. Vyavasaya, the General. 
 3.  With 
