--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/03.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/03.md
@@ -2,58 +2,17 @@
 title = "03"
 
 +++
-THEN ENTER RAGA AND DVESHA". 
-Raga.--Friend! With thee for my help. the 
-achievement of my master's 
-I fancy, as (already) accomplished. 
-mission, 
-Dvesha. Companion! I am in the same boat with thee, as I am ordered by his Majesty to create obstacles against the efforts of Viveka, who worketh against thee. 
-Raga.Friend! Other mandates (too) there are to carry out as occasion may demand. I shall just disclose them. 
-1. 
-Lust-Attachment to wordliness. 
-1. Hate-for Godliness. 
-2. 
-169 
-1. Now that the heretics1 have been of overthrown through the manœuvre Vivēka, the way to Trivarga is the only outlet for Mahāmôha's energies. Beggarly Virakti3, I shall just decoy to a distance, and thou shalt entice Vishnu-bhakti all 
-at once. 
-Their disjunction with Jiva can be, by all means, effected, by casting the nets of making Svarga appear worthy and Moksha unworthy,-in all places. Expert as I am in a thousand and one deceits, I shall just beguile the beggarly Virakti, as Mārīcha 
-Buddhists and others. 
-1. See n. 1. p. 115. 
-2. 
-Dispassion or Renunciation. 
-1. Love or Devotion to Vishnu. 
-2. The allusion is to the well known incident of Maricha being asked by Ravana to decoy Sri Rama into the Dandaka forest. Maricha assumed the form of a golden deer and appeared in the vicinity of Sitā, who, enchanted by its charming appearance, persisted in Rama catching the same Rama was decoyed to a distance by Maricha, when Ravana enticed away Sita (Aranya-Kanda-Sri Ramayana. 
-170 
-did Mithili' and thou shalt entice VishnuBhakti as Pôulastya' did. 
-Dvesha. Then what? 
-Raga. True, the Teachers of Vedanta Siddhānta hath routed the head-less Pūrvamimāmsakas, the foremost of the wishers of Mahāmôha's 
-success-the very Purobits of demon Hiranya as it were re-incarnate on earth, yet I shall propound their very creed ingeniously and thus accomplish my 
-master's mission. 
-Dvesha. Rightly opportune is thy resolve to stand by the victorious banner of the arch-chiefs of Mahamôha promoting Atheism, viz., the creed of Nirisvara Mīmāmsa. 
-Raga. 2. If it becometh a passion to long 
-1. Another name of Sitā. 
-2. Rāvana. 
-3. The pupil referred to in the previous Act. (Vāda.) 
-Officiating Priests. 
-1. 
-2. 
-The demon killed by Vishnu in is avatara of 
-man-lion. 
-1. Materialism denying the God-head.171 
-after the paltry and ephemeral pleasures' how can dispassion possess one who longeth for endless and eternal joy ?2 
-1. It is mistaken to aver that beatitude is Self-realisation; but if beatitude be one intercoursing with another, then what else but Kāma' can best constitute what is called beatitude (Moksha), coveted by one and all? Beatitude therefore can be no other than Svarga, the seat of all (carnal) enjoyments at will, and this view is supported by the authority of our betters, the NirisvaraMimamsakas (Godless philosophers). 
-Dvesha. Indeed! It is this that is accepted to be the final decision, arrived at after a careful study of the traditions of Mahāmôha, by savants well-versed in Mahāmôha's lore*. 
-1. Enjoyment of Svarga, etc, 
-2. 
-3 
-Moksha. 
-स्वम्वम्यम्य नित्यप्रामत्वेन उपायोपदेश वैयर्थ्यात्मुिखरूपत्वादर्श- 
-नाच. 
-1. 
-Atheism and Hedonism. 
-172 
-1. Misery is expelled not, if beatitude be the attainment of Glory (Brahman) conjoin- 
-ed again with mind (soul) and matter (non-soul). But if beatitude be the attainment of Glory (Brahman), denuded of all this, then it is no joy at all. And then the Vedic conclusion becometh but a mere verbal expression." 
+…
+
+
+Dvesha. Indeed! It is this that is accepted to be the final decision, arrived at after a careful study of the traditions of Mahāmōha, by savants well-versed in Mahāmōha's lore*. 
+
+
+
+ 
+[[172]] 
+
+1. Misery is expelled not, if beatitude be the attainment of Glory (Brahman) conjoin-ed again with mind (soul) and matter (non-soul). But if beatitude be the attainment of Glory (Brahman), denuded of all this, then it is no joy at all. And then the Vedic conclusion becometh but a mere verbal expression." 
 Raga. Well spoken, friend! Like the exodus 
 of the swarm of birds from their nests in the hollow of a branch of a tree, burning with wild fire, surely this utterance of thine will drive Vishnu bhakti to a distance. How now is this stupid Vivēka going to create for Jiva a diversion from Samsara,-Jiva whose mind is blinded by his eagerness for enjoyment eternal? The 
 1. The attainment of a Brahman with attributes, mind and matter (the body of God) must still give one the continuance of worldly experiences, for according to the Visishtadvaita doctrine, God is never separable from the cosmos, for it is His ever-united body. 
@@ -112,7 +71,7 @@ stage!
 Why mention more of matters more 
 For, Now:- 
 inert? 
-1.  Vanquishing Môha soon, like Indra, 
+1.  Vanquishing Mōha soon, like Indra, 
 The head-demon-Vivēka releaseth 
 quick from Samsara Jiva enbound. Srutis' tears of grief, by insult made 
 to shed,. 
@@ -155,7 +114,7 @@ Then, the Jiva, like the bee, shall enjoy the honey of Parama-purusha's' lotus-F
 and shall look upon even the Devacity ās but a hell. 
 1.  Here, the moment Jiva casteth away his attachment to Samsara, on account of bis recollection of his endless wanderings, an eager longing to attain the Supreme Brahman doth seize him through the knowledge of His singular attributes, and he then doth rightly indulge in the study of the several groups of sciences, relating to Godhead, pure, and devoid of all delusions and by discerning as to which of the manifold attributes of God are specifically dealt with and which not in any particular science (thereof). 
 I shall just dwell in brief on the methods of overcoming this illusion. 
-1.  Môksia, reached through a knowledge of the different (God) Sciences' is either one or many. If they are one, the *!!! existence of several sciences is not justified, 
+1.  Mōksia, reached through a knowledge of the different (God) Sciences' is either one or many. If they are one, the *!!! existence of several sciences is not justified, 
 2. Nana-Vidyas the varied ways of divine medi- 
 tation which are 32 such as fal, etc. 
 183 
@@ -273,7 +232,7 @@ Viveka.-There is but one remedy and that is seeking the pardon of the one that w
 For:- 
 1.  An aquatic animal' falleth into great anguish by being out of water, but the same doth revive by water gradually gained. Similarly, the Jíva, cast away by the insult offered to the great, falleth into Samsara and getteth true knowledge back by resorting to the very person. 
 Besides :- 
-1.  A person, deserved by good deeds done during diverse births and who hath refrained from sinning against the godly, dame Vidya, leading to Môksha, approacheth anon with love abundant. 
+1.  A person, deserved by good deeds done during diverse births and who hath refrained from sinning against the godly, dame Vidya, leading to Mōksha, approacheth anon with love abundant. 
 2.  Para-bhakti,-the ship, as it were, to cross the ocean of Samsara, well fastened by ropes of Sātrika-tydya', so helpful to Nivrittidharma, saileth clear and acquireth momentum day by day. 
 Fist, to wit. 
 Vidya is personified here as a woman. 
@@ -284,7 +243,7 @@ Devotion towards the Brabinan.
 1. See n. 2, p. 21. 
 196 
 Sumati. (Musing) Rightly so, if Anima', 
-Mahima, Garimā, Laghima', Vasitva"," Isītva, Prāpti', Prākāmya, etc. ordained by dire Destiny to a person who is yet not quite exempt from all past sins and which are capable of being used for Môksha, do not therefore impede the means by which Môksha is reached. 
+Mahima, Garimā, Laghima', Vasitva"," Isītva, Prāpti', Prākāmya, etc. ordained by dire Destiny to a person who is yet not quite exempt from all past sins and which are capable of being used for Mōksha, do not therefore impede the means by which Mōksha is reached. 
 Viveka.-Queen! True. The ever-hostile obstacles to (God-) Yoga are indeed difficult to surmount. The attainment of Moksha will be unfettered only if these Yogaobstacles are prevented from appearing at all, instead of renouncing them after they actually occur. 
 (Then enter a messenger with palm leaf adorning his head). 
 1. Atomicness. 
@@ -300,7 +259,7 @@ Power to reach the desired place.
 S. Realisation of desires by mere thought. 
 197 
 Messenger.-(With hands suppliant.) 
-King! This messenger-myself, named Samvriti-satya1 who never escapeth the eye of my suzerain lord Mahāmôha, whose movements are everywhere unobstructed, saluteth thee with thy queen. 
+King! This messenger-myself, named Samvriti-satya1 who never escapeth the eye of my suzerain lord Mahāmōha, whose movements are everywhere unobstructed, saluteth thee with thy queen. 
 Viveka. -(Aside). Why hath he come here? 
 (Aloud, in humour). May thou live long, but without casting away thy nature, ever addicted to perverse understanding. 
 Messenger.-(Pointing to the palm leaf, in his suppliant hands, taken from his head). Great king! This indeed is an irrefragable mandate, indited by the Accountant Lobha and brought to thee by me, who am in the confidence of my lord Mahāmoha,-the emperor of the fourteen worlds, whose affairs are all determined by his minister Dvāpara3, and who is established in the faith of Durmati1. 
@@ -316,13 +275,13 @@ Viveka. With concealed contempt).
 Man! Thou art acceptable to us as well; hence read the message in all privacy. 
 Messenger. As thy Majesty commands. 
 (Reads the message humbly). 
-1.  Thus (runneth) the mandate of Mahāmôha, so esteemed by Kāma and others. It is also not obnoxious to the residents of Svarga, who are repugnant' to the decline of Samsāra. 
-Viveka.-(Interrupting and smiling) Queen! Mark that we are treated as objects of wicked Mahāmôha's commands ! But just to know the enemy's mind, we should hear the rest of the message. Well then, messenger! proceed. 
+1.  Thus (runneth) the mandate of Mahāmōha, so esteemed by Kāma and others. It is also not obnoxious to the residents of Svarga, who are repugnant' to the decline of Samsāra. 
+Viveka.-(Interrupting and smiling) Queen! Mark that we are treated as objects of wicked Mahāmōha's commands ! But just to know the enemy's mind, we should hear the rest of the message. Well then, messenger! proceed. 
 1. The idea here is that the Devas resident in Svarga fear that the Samsara will decline, if Vivēka is given free scope for the spread of Vairagya, which would eventually minimise their own enjoyment. 
 199 
 Messenger." We forgive thee for all thy mischief ending with creating faith in the worship of the Para-Brahman, if it (mischief) bringeth about the realisation. of (sense-) delights ". 
 Viveka. (Gesturing contempt). 
-Lady! Dost thou hear the strange Bhikshupa aprasarana method' ? Or it becometh Mahāmôha, bent upon carrying out his wish, unyieldingly like the corpse's clenched fist. 
+Lady! Dost thou hear the strange Bhikshupa aprasarana method' ? Or it becometh Mahāmōha, bent upon carrying out his wish, unyieldingly like the corpse's clenched fist. 
 Sumati.-Yes, so it is. 
 Viveka. And then ? 
 Messenger. -38. "If thou dost transgress 
@@ -344,7 +303,7 @@ even he who is free of all desire doth difficult Moksha attain by Kama (desire) 
 universe ?" 
 Sumati.-Great king! Is then the fish-bannered 
 Kāma invincible even to thee? 
-Viveka. -Queen mine! Is there any rejoinder for the twaddle of Mahāmôha, loved by Mithya-drishti? But let us hear the rest as well. 
+Viveka. -Queen mine! Is there any rejoinder for the twaddle of Mahāmōha, loved by Mithya-drishti? But let us hear the rest as well. 
 Messenger.-41. "If one doth fret at Kródha, 
 (anger), one cannot be said to be free from anger. If one is angry, how could he be said to have vanquished Krodha? In any case therefore, anger is a ruinous rope with snares at either end. 
 Sumati.-My lord! Kródha seemeth to be even more unconquerable than Kama, 
@@ -429,5 +388,5 @@ AUM.
 1. Lights waved as an act of adoration. 2. Patience. 
 2. Peace. 
 3. Place of the practice of good. 
-ÔM=(A-U-M) 
+ōM=(A-U-M) 
 SANKALPA-SURYODAYA 
