--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/04.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/04.md
@@ -38,7 +38,7 @@ earth,
 Ah Madana! How to describe thee, the 
 splendour's ocean? 
 1. The meaning is that the whole world is under 
-Môha's Lord paramountcy 
+Mōha's Lord paramountcy 
 1. Anger. cf. msania agafa 
 209 
 Kama. - Friend! Just think of thy greatness 
@@ -160,7 +160,7 @@ Further :-
 Just mark here the two horns of the dilemma :- 
 1.  If, through the power of discrimination, a person, in whom the power of aversion fto worldly pleasures) hath just dawned, doth fret at me, how could he possibly be said to have subdued Anger (Krodha)? If (however) on the other hand he casteth away anger, how could he be said to have shunned me (Kāma)? Vain therefore is the twaddle of fools who speak of the subdual of (both) Anger and Desire! 
 220 
-(Then enter Krôdha dressed in a horrid guise.) 
+(Then enter Krōdha dressed in a horrid guise.) 
 Krodha-(Approaching in haste). 
 Hail my 
 friend! Hail, my blossom-bowed Kāma!the vanquisher of Vivēka by movements unhindered! Who is this partisan of Vivēka who prattleth in vain about the subdual of Anger and Desire? 
@@ -169,7 +169,7 @@ friend! Hail, my blossom-bowed Kāma!the vanquisher of Vivēka by movements unhi
 Kama.--Welcome, my good friend Krodha, the foremost among charioteers and ever ferocious towards my enemies! Thou hast come in right time, intent on helping me, when I have been deeply deliberating221 
 as to how I should fulfil my master's mission. Thou hast under thy sway the great Mahēsvara and others, who (ever so much may) exercise self-control. Hurrah! Our great king hath conquered! 
 Further :- 
-1.  When vanity hath vanquished, when I (Kāma) have stopped havoc, when Môha hath ceased enthusiasm, when the forest of sin hath burnt away, yet thou, alone of all, fed by the manifold kinds of fuel, say of a particle of contempt, art capable of disrupting Yoga for the Supreme Brahman! 
+1.  When vanity hath vanquished, when I (Kāma) have stopped havoc, when Mōha hath ceased enthusiasm, when the forest of sin hath burnt away, yet thou, alone of all, fed by the manifold kinds of fuel, say of a particle of contempt, art capable of disrupting Yoga for the Supreme Brahman! 
 Vasanta. Surely this meeting of Kāma with thee (Krodha) doth resemble the conjunction of wind with fire! With materials, all so ready, why should we tarry any further? Success surely followeth in the wake of enthusiasm. Methinks success will crown us, if we only adopt the plan (of nocturnal slaughter) advocated by our dear friend. Kāma. 
 1. Siva. 
 222 
@@ -311,13 +311,13 @@ For :-
 as ye, 
 (Musing). Unconquerable Kāma and Kródha are, something still lurketh in my mind. In all business the greater the succour, the more successful are the results. 
 (Gesturing as if approaching footsteps were heard). 
-1.  Yonder cometh Lôbha, attended by his consort Trishna, despatched by Mahamaha, to despoil Jiva's craving for Móksha,-Lôbha, the foremost of the devastators of Dharma, the ruiner of 
+1.  Yonder cometh Lōbha, attended by his consort Trishna, despatched by Mahamaha, to despoil Jiva's craving for Móksha,-Lōbha, the foremost of the devastators of Dharma, the ruiner of 
 Eyes blinded with passion. 
 1. Covetousness. 
 236 
 the efforts of Sama and Dama, the swallower of the ocean of knowledge and the deviser of obstacles to Yogis. 
 Kama and Krodha.-(See with delight). 
-Vasanta. - Invite here Lôbha, the one coveted 
+Vasanta. - Invite here Lōbha, the one coveted 
 after, by all minds in the universe. 
 Kama and Krodha.Well conceived, 
 friend 
@@ -326,7 +326,7 @@ Kama.--(Snapping the thumb and fore-finger
 together). 
 Krodha.-(Seconds with loud applause) 
 (Then enter Lobha and Trishna). 
-Lobha.-47. Here in haste approach I-the consort of Trishna, bearing Mahāmôha's commands on my head, that are as it were, a garland (to the head). Who shall bring about contentment to this self of mine, even with the gift of golden Brahmanda worlds, so famous for immensity and for numbers? 
+Lobha.-47. Here in haste approach I-the consort of Trishna, bearing Mahāmōha's commands on my head, that are as it were, a garland (to the head). Who shall bring about contentment to this self of mine, even with the gift of golden Brahmanda worlds, so famous for immensity and for numbers? 
 Love mine! 
 (Embracing Trishna). 
 237 
@@ -427,7 +427,7 @@ must retrace our steps.
 (All fear). 
 1.  If one of ye three, 
 peradventure, 
-meet with danger, surely Mahāmôha whose very life is in the lives of those devoted to him, shall himself put an end to kis life. Instantaneously shall his wife Durmati commit Sat. Therefore retreat from 
+meet with danger, surely Mahāmōha whose very life is in the lives of those devoted to him, shall himself put an end to kis life. Instantaneously shall his wife Durmati commit Sat. Therefore retreat from 
 1. Army. 
 3 
 See n. 6, p. 2. 
@@ -442,7 +442,7 @@ we done for our king's business?
 Lobha. Friend! 
 1.  The march of time, with the high speed of the sun's car revolving fast, can not be impeded by the impact of a gust of wind from the opposite direction. The wise won't shut the door after the horse is stolen. Therefore it is better for us now to think how best we may tide over our future troubles. 
 Therefore, in this affair, we must first protect our lives. For, it is said that one must protect oneself by every means in his power. 
-Kama.--Our Lôbha, who knoweth the ways of 
+Kama.--Our Lōbha, who knoweth the ways of 
 the world, giveth us advice most apt. 
 247 
 1.  It is not meet that we, who wanted to adopt the policy of night-slaughter till now, should fall into the great abysmal pit of angry Viveka. Now shall Mahamoha himself strive to defeat our foe in action, himself leading Dambha' with his wife Kuhana and Garva3 with his wife Asūyā1 etc. 
@@ -453,5 +453,5 @@ AUM.
 2. Pride. 
 2 Fraud. 
 1. Envy. 
-ÔM-A-U-M) 
+ōM-A-U-M) 
 SANKALPA-SURYODAYA 
