--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/05.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/05.md
@@ -28,7 +28,7 @@ the daily midday worship.
 1. Ceremonies relating to departed souls. 
 2. Full-moon days when Sthālipaka is performed.251 
 Much I esteem 
-my co-partner in life. thee, as thou dost maintain my Brahmanism, thou-my sacrificial wife-the lawfully wedded wife of a great Srôtriya'. Always thou observest the Dvādasi2 vow, after sumptuously feeding me, who is ever pinched by hunger and thirst, even on Harivasaras days, privately and well thou showest thine vow to others, by ostensibly wandering from door to door under the pretext of gathering materials therefor. I shall now however unfold thee a secret. 
+my co-partner in life. thee, as thou dost maintain my Brahmanism, thou-my sacrificial wife-the lawfully wedded wife of a great Srōtriya'. Always thou observest the Dvādasi2 vow, after sumptuously feeding me, who is ever pinched by hunger and thirst, even on Harivasaras days, privately and well thou showest thine vow to others, by ostensibly wandering from door to door under the pretext of gathering materials therefor. I shall now however unfold thee a secret. 
 There now exist some Asuras, who have hid goodbye to all Dharmas, putting on the garb of ascetics, maintaining arguments tending to Māyā, seeming, as they 
 1. One well-versed in the Vēdas. 
 2. 
@@ -42,7 +42,7 @@ unreality.
 252 
 are, Kali-yuga itself incarnate. Thou shalt, at no time, leave my presence, seeing that these Asuras desire to entice thee, as Rāvana' and Arjuna once did. None but thou shalt even for a moment serve me, the best of Brahmanas. 
 just now, 
-Queen Durmati hath, requested me to practise some witchcraft on Vivēka, the desperado, who broodeth over some evil or other (to use) against our king Mahāmôha, the Lord paramount of all pleasures, both mundane and srargic. It is as follows:- 
+Queen Durmati hath, requested me to practise some witchcraft on Vivēka, the desperado, who broodeth over some evil or other (to use) against our king Mahāmōha, the Lord paramount of all pleasures, both mundane and srargic. It is as follows:- 
 "Well, boy Dambha! Thou who spoilest all the Dharmas of the universe 
 shalt exterminate Viveka". 
 Averse as I am ever to desires, out of extreme civility, believing in the sages' dictum-"There is no sin in exorcising 
@@ -84,7 +84,7 @@ Kuhana.--(Musing).
 Never mind. Is the 
 255 
 sorcery, that thy distinguished self proposest to practise against Vivēka and in which thou requirest my co-operation, of the type of Syna' or of any other kind? 
-Dambha. -Ah! great Srôtriya's lawful wife! 
+Dambha. -Ah! great Srōtriya's lawful wife! 
 I just tell thee the secret of secrets, known only to my most dutiful disciples. Tell this not even to thy companions, Trishna and others. The proposed witchcraft is not specially prescribed like Syēna'. 
 But:- 
 1. All that is ordained as virtuous by the Srutiand Smritis, but when done at my instance, do wholly act as sorcery against Vivēka. 
@@ -93,7 +93,7 @@ Dambha. Pah, simpleton! To me who knoweth everything, who is the initiator? All 
 1. A particular form of sorcery 
 256 
 Albeit, I have taken one by the name of Garva, the disdainer of all worthy people, 
-and one in the liking of all, who is the propounder of Mahāmôha's cult, as a mere witness in this affair. Awaiting his arrival, I sit with all materials ready on this seat of Kusā grass, spread by the sages seven, in this siddha hermitage, purified nine times over. 
+and one in the liking of all, who is the propounder of Mahāmōha's cult, as a mere witness in this affair. Awaiting his arrival, I sit with all materials ready on this seat of Kusā grass, spread by the sages seven, in this siddha hermitage, purified nine times over. 
 Kuhana.Well done. The success of the enter- 
 prise shall equally be fruitful. 
 Dambha. (Gesturing omen). My guardian angel Kuhanā! My right eye throbbeth and this surely doth indicate the encounter with a friend-Looking in front). 
@@ -101,7 +101,7 @@ Who is yon great soul that descendeth to this mortal world and approacheth towar
 (Then enter Darpa wearing large sandals on the feet, waving his big arms every moment and with a flag-stay on which was 
 257 
 tied firm a parchment inscribed with an oath). 
-Darpa. - Incited by king Mahāmôha to condemn the best men, far and wide, I have wandered, just to discern the differences existing in the different worlds, and I have but now descended from Satyaloka' to this middle world, after thoroughly surveying all the quarters, up to the Chakravāla Mountain. Worshipped by the guardians of the Points of Space headed by Indra, I wear this ruby-garland, a present given to me by the Ocean3, the relative of the Vanquisher of the demons Madhu and Kaitabha, the Ocean, the donor to the Dévas of the great presents, the cow, the wine, the nectar, the Moon, the Pārijāta, the Kaustubha, the Chintamani,-the Ocean, 
+Darpa. - Incited by king Mahāmōha to condemn the best men, far and wide, I have wandered, just to discern the differences existing in the different worlds, and I have but now descended from Satyaloka' to this middle world, after thoroughly surveying all the quarters, up to the Chakravāla Mountain. Worshipped by the guardians of the Points of Space headed by Indra, I wear this ruby-garland, a present given to me by the Ocean3, the relative of the Vanquisher of the demons Madhu and Kaitabha, the Ocean, the donor to the Dévas of the great presents, the cow, the wine, the nectar, the Moon, the Pārijāta, the Kaustubha, the Chintamani,-the Ocean, 
 The world of the Prajapati. 
 1. 
 2. Human world. 
@@ -145,7 +145,7 @@ adopt the ways' of the villain?"
 2. Kanada, (2) Akshapada. (3) Vyasa. (4) Kapila, 
 (5) Patanjali, (6) Jaimini. 
 262 
-Andhra, Dravida, Karnāta, Chôla, Konkana and others? 
+Andhra, Dravida, Karnāta, Chōla, Konkana and others? 
 Alas ! 
 1.  Sitting at ease at the foot of the Asvattha' tree, I have formulated two scores and eight kinds of Buddhism, in several coarse dialects, and I have overcome the pedantic pride of the followers of the Vedas. 
 Thenceforth our renowned disciples move (unshackled) all over the world, leaving their enemies with their bare names and implanting their triumphant banners in all the Islands Seven. 
@@ -175,7 +175,7 @@ These countries, infested by barbarians, who are no better than goats, beasts an
 acting as ministers to foolish kings. 
 (Looking to the North). Yonder some one cometh, facing the South, either from Kasmira, or Jalandhara. I shall just ascertain from him how my wives fare? Ah! good Brahmana! "Knowest thou the present plight of my wives Irshā, and Asūyā, who have set out to go round the Mēru mountain, under the leading of Durmati ?" 
 (Then listening). 
-"What! Savest thou that they are imprisoned in the depths of Nivritti Dharma, by Sumati's deceitful companions Maitri', Karuna, Muditā," and Upēkshā'" ? (With anger). Ah, this devil of a sinful Brahmana speaketh untruth. Ah thou mischievous bastard Srôtriga! Thou Brahma-Rakshasa! 
+"What! Savest thou that they are imprisoned in the depths of Nivritti Dharma, by Sumati's deceitful companions Maitri', Karuna, Muditā," and Upēkshā'" ? (With anger). Ah, this devil of a sinful Brahmana speaketh untruth. Ah thou mischievous bastard Srōtriga! Thou Brahma-Rakshasa! 
 How could this mishap befall my 
 Friendship towards the virtuous. Pity towards the miserable. 
 1. Joy towards the "happy. 
@@ -187,7 +187,7 @@ chaste wives, who, though enticing all the world, never for a moment lack in the
 Therefore this hunter's spy, Mithyachara, ever habituated to utter lies, is unfit to 
 1. See n. 1, p. 141. 2. Buddhists, such as Sautrāntika, Yogachara who hold that the whole external world is unreal, and as the Mayavadins also believe similarly, the appropriateness of the relationship is evident. 3. See n. 2, p. 144. 4. See n. 1, p. 137. 5. Follower of false practices. 
 267 
-be conversed with by high souls like myself; to wipe off the sin of having seen him, I shall just see the sun or myself. (Walking quickly). Alas! Are not yon countries in the midland regions between the great rivers the Ganga and the Yamunā? Who is here, though gifted with boons by Brahma and Siva, that will understand my doctrine, full of diverse theories which would baffle even those who profess the knowledge of Brihaspati? Much less he who could controvert, criticise or support my doctrine! These great cities are topsyturvied by the barbarian kings of the West, invited by our sovereign Mahāmôha to shut off the doors to Móksha. Here moveth about some Dāmbhika-Chakravarti?! 
+be conversed with by high souls like myself; to wipe off the sin of having seen him, I shall just see the sun or myself. (Walking quickly). Alas! Are not yon countries in the midland regions between the great rivers the Ganga and the Yamunā? Who is here, though gifted with boons by Brahma and Siva, that will understand my doctrine, full of diverse theories which would baffle even those who profess the knowledge of Brihaspati? Much less he who could controvert, criticise or support my doctrine! These great cities are topsyturvied by the barbarian kings of the West, invited by our sovereign Mahāmōha to shut off the doors to Móksha. Here moveth about some Dāmbhika-Chakravarti?! 
 1.  These, though they will never go abegging and will scorn even voluntary 
 2. The idea is that the sanctity of his own self is 
 no less efficacious to eradicate sin than the 
@@ -206,7 +206,7 @@ drunk.
 269 
 country of the Mlechās (barbarians) and who, to all appearance, pose themselves as the defenders of the Varnāsramas. 
 In these villages:- 
-1.  The Samskaras are mere merrymaking festivities; Sandhya is performed only for diversion's sake; Savitri is ever interrupted by gossip; voiding of excrement is a mere show; thus is this universe topsy-turvied by the force of this Kali age, which acteth in harmony with king Môha and which setteth forth the doctrine of the Alepakas. 
+1.  The Samskaras are mere merrymaking festivities; Sandhya is performed only for diversion's sake; Savitri is ever interrupted by gossip; voiding of excrement is a mere show; thus is this universe topsy-turvied by the force of this Kali age, which acteth in harmony with king Mōha and which setteth forth the doctrine of the Alepakas. 
 Oh, strange also is this course of Dharma practised here! 
 6 
 1.  Ever the young couples of this 
@@ -284,7 +284,7 @@ resembling sand-heaps of the ocean of achāra; in
 Earth used for washing. 
 1. Ceremonial practices 
 276 
-another place there are blades of Kusagrass, as sharp as weapons collected to root away sins; yet in another place appear gathered, flowers, tendrils and fruits, the relics of worship. Methinks, this is the holy hermitage of some true yôgi! 
+another place there are blades of Kusagrass, as sharp as weapons collected to root away sins; yet in another place appear gathered, flowers, tendrils and fruits, the relics of worship. Methinks, this is the holy hermitage of some true yōgi! 
 1.  Having traversed beyond, the mire of knowledge opposed to (the teachings of the Vēdas), the wilderness of the Vindhya-like sense-dictates, the mirage of Trivarga' and the net of Triguna' by various austerities, here is some one, shining almost like a Mukta3. He is either the offspring or the elder brother, or may be the father, of the Sun.- 
 I shall just approach him. 
 (Thus saying enters the hermitage). 
@@ -295,7 +295,7 @@ Prakriti.
 1. Absolved person. 
 277 
 indicateth that my meeting with my sweetheart is close at hand. 
-(Then enters Asūyē, disguised as an ascetic). Asuya. I am now commanded by Durmati, the queen of Mahāmôha, the foremost of Vivēka's foes, to corrupt the minds of the wise, so masquerading as would strike confidence into the minds of the whole universe. All the worlds ten and four I have wandered and after bathing in the holy waters of the Prayaga, I am just approaching the hermitage of this venerable ancestor named Dharinadhvaja. Clever espionage I should practise so as to make even good appear evil. 
+(Then enters Asūyē, disguised as an ascetic). Asuya. I am now commanded by Durmati, the queen of Mahāmōha, the foremost of Vivēka's foes, to corrupt the minds of the wise, so masquerading as would strike confidence into the minds of the whole universe. All the worlds ten and four I have wandered and after bathing in the holy waters of the Prayaga, I am just approaching the hermitage of this venerable ancestor named Dharinadhvaja. Clever espionage I should practise so as to make even good appear evil. 
 (Praising her own skill). 
 1.  Vigilant that I am. even Isvara, the extirpator of the sins of the universe, could not afford to remain exempt from blemish. 
 Unrestrainedly, the persons obsessed by me ever impuse faults even in cases where they exist not in the least. What to say 
@@ -431,7 +431,7 @@ Dambha.--(With anger). Ah, thou crow of a chatter-box! Like a dog, to vainly wan
 For:- 
 1.  Some there are addicted to all manner of vices, wandering like thee, vainly in this world and claiming shelter under the strength of their mere racial superiority. They are avoided by the virtuous; they get angry and they invoke without any sense of shame disgrace on the onlooker.291 
 Darpa. (Clapping his hands and mocking) Why so frownest thou on me, like & monkey, when I but speak facts as they are ? Dambha.-Ab, thou vain fellow, as massive as a pillar! Surely thou knowest not the episode known to all the universe. 
-1.  Once when on the confines of Satyalôka' I loitered, the Lotus-born Brahmā received me, all of a sudden, with the sages headed by Sanaka," and with his hands washed seven times over, himself gave me Arghya, all humble and lowly! 
+1.  Once when on the confines of Satyalōka' I loitered, the Lotus-born Brahmā received me, all of a sudden, with the sages headed by Sanaka," and with his hands washed seven times over, himself gave me Arghya, all humble and lowly! 
 2.  How many in this world are the sages ancient, who, claiming their descent from the Lotus-born Brahtoa himself, win across the darkest of sins, purified, indeed by the water, washed of my feet? 
 Kohana.-So it is! An eye-witness I was 
 as well, thy dutiful wife. 
@@ -461,7 +461,7 @@ Dambba. Indeed I too have offended thee.
 294 
 (Asūya and Kuhanā embrace each other tightly). 
 Dambha & Darpa.-As we wished, so have we met here, by chance. Now we should be with our king in time. 
-(Then enter Mahāmôha and Durmati). 
+(Then enter Mahāmōha and Durmati). 
 Mabamoha.(Musing). My love! 
 We, having taken the vow to exterminate the most reckless ruiner of our clan, Vivēka, have just heard that Kāma Krodha and others, sent by us to spoil Jiva's Yoga, have retreated, with their squadron, all broken up like a dam made of sand, seized with an unexpected panic, protecting each other, on the analogy of the maxim of the Lion and the Forest,' and that they, ashamed to behold our face, 
 1. सिंहवनगुप्तिन्याय: - The lion cannot exist without the forest, for hunters will bave easy access and will make short work of the lion; similarly the forest cannot exist without the lion, for, then, the forest in the absence of the lion will be transformed into cultivable land. 
@@ -592,7 +592,7 @@ Such is the indomitable force of the theory of nature. The law of cause and ffec
 306 
 Even thus:- 
 1.  Ah! How loud in the world, flourish systems of sophistry, by the hundred, sharp as shingle, agitating the world by the legerdemain of befangled controversies, raging by "No"s pitted against "Yes", and "Yes "s against "No"s ! 
-2.  Virôchana', taught by the all-know ing Prajapati who was pleased with his longservice to him, promulgated for mankind the quintessence of the Asurôpanishat Even in this matter- 
+2.  Virōchana', taught by the all-know ing Prajapati who was pleased with his longservice to him, promulgated for mankind the quintessence of the Asurōpanishat Even in this matter- 
 3.  Mukti, it was said, by the elders to be the annihilation of the body and the senses. But considering this as absurd, I composed 
 crow 
 fall of a palm-fruit upon the head of a (so as to kill it) at the very moment of its sitting on a branch of that tree and is used to denote a very unexpected and accidental occurrence. but not a linked cause and effect. 
@@ -623,7 +623,7 @@ by king?
 Durmati's Lord! 
 It is said "Truth shineth in kings." 1 shall therefore inform thy Majesty, what I saw, though it may be disliking to me. 
 309 
-For, I know too well the present condition of Kāma and Lôbha. 
+For, I know too well the present condition of Kāma and Lōbha. 
 1.  Immersed though men are in the Ocean of myriad lusts, though the season of Spring reigneth, though the Malayā breezes blow, Kāma, abashed, as it were, at reverses', due to his slight remissness (in attacking the Jiva), it seems, hath fallen into slumber, and never toucheth his shafts! 
 What need then to speak of the other (Lobha) ? 
 Listen :- 
@@ -635,7 +635,7 @@ present plight; I shall acquaint thee with
 Also means, expert in base wit. 
 310 
 what I saw, in deference to the precept"By Truth shall the Wise be followed. 
-1.  Even Krôdha-the enhancer of the happiness of veteran warriors, whose prowess is manifest in the knitting of his eyebrow-premonitory of the coming cataclysm, destroying the cosmos of the twiceseven worlds, remaineth all stupified by the influence of the poisonous drug, Virakti. 
+1.  Even Krōdha-the enhancer of the happiness of veteran warriors, whose prowess is manifest in the knitting of his eyebrow-premonitory of the coming cataclysm, destroying the cosmos of the twiceseven worlds, remaineth all stupified by the influence of the poisonous drug, Virakti. 
 Mabamoha.-(With a Sardonic laugh.) Ah! 
 These are the evil counsels of the ruiner of our race, Viveka. All wary then, we must cover the whole universe with vice, in such a way that there could be no opportunity for Vivēka. Vice alone is virtue for us, who are intent on preserving our race. The Ithasins' aver :-Virtue and Vice alternate according to individual situations." Viveka, by himself not very strong, thus reduced to straits, shall easily surrender. After all, what is this Vivēka ? It is certainly no hard task for the sickle to cut the herb, 
 1. Epic-writers. 
@@ -685,11 +685,11 @@ the queen's mandates,
 Mahamoha. My good Durvasana! Proclaim under my command to my different Secretaries, expert in all learning and writing:- 
 Be it known to all that the King of Kings and Suzerain Lord, the great Mahāmoha with Queen Durmati commandeth :- 
 315 
-"Let it be written that Mahamôha hath made a free grant of the famous metropolises seven, known all the worlds over, as the seven Mukti-kshetras the great islands seven, the oceans seven, to his ministers seven, Kama, Krodha, Lôbba, Mada', Dambha, Matsarya and Stambha1." 
+"Let it be written that Mahamōha hath made a free grant of the famous metropolises seven, known all the worlds over, as the seven Mukti-kshetras the great islands seven, the oceans seven, to his ministers seven, Kama, Krodha, Lōbba, Mada', Dambha, Matsarya and Stambha1." 
 1.  “ 
 8 
 And:- 
-Leaving now Indra and the other Devas, who retire from their high estates at each successive Manvantara", and who tremble with fear at the very mention of my name, all this universe shall interpret the use of the words --Nama, Seast, Srāha, Sradha, uttered even casually, as appertaining to myself-Mahāmôha." 
+Leaving now Indra and the other Devas, who retire from their high estates at each successive Manvantara", and who tremble with fear at the very mention of my name, all this universe shall interpret the use of the words --Nama, Seast, Srāha, Sradha, uttered even casually, as appertaining to myself-Mahāmōha." 
 Shrices of Salvation. 
 1. Jealousy. 
 The period or age of a Manu. 
@@ -704,11 +704,11 @@ Queens' commands be obeyed.
 66 
 Victory to the Lord! 
 (Exit.) 
-1.  "Oh, Môha great! Like unto thee is the fierce-rayed Sun, unfavorable owing to its heat' to men's movements, causing a time suitable for eating, and desiring to get into the opposite direction-West. 
+1.  "Oh, Mōha great! Like unto thee is the fierce-rayed Sun, unfavorable owing to its heat' to men's movements, causing a time suitable for eating, and desiring to get into the opposite direction-West. 
 2.  
-Now-a cook, the servant of Durmati, both from the home of Indra', and the home of Varuna, bringeth a fit meal? made of the ingredients of sweet nectar, and wine flowing incessantly, for Mahāmôha." Mahamoha.-(Listening.) We shall now retire 
+Now-a cook, the servant of Durmati, both from the home of Indra', and the home of Varuna, bringeth a fit meal? made of the ingredients of sweet nectar, and wine flowing incessantly, for Mahāmōha." Mahamoha.-(Listening.) We shall now retire 
 into our inner rooms, as the herald 
-1.  The epithets when applied to Mahāmôha mean 1. Prowess 
+1.  The epithets when applied to Mahāmōha mean 1. Prowess 
 2 Torments of Samsara, unfavor- 
 1. 
 able to the attainment of Moksha. 
